database setup for table Currencies

--- a/CurrencyTable/CurrencyTable/appsettings.json
+++ b/CurrencyTable/CurrencyTable/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DevelopmentConnection": "Server=(localdb)\\MSSQLLocalDB;Database=CurrencyTable;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
