added autocreation of DB if not exists on app run

--- a/CurrencyTable/CurrencyTable/appsettings.json
+++ b/CurrencyTable/CurrencyTable/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DevelopmentConnection": "Server=(localdb)\\MSSQLLocalDB;Database=CurrencyTable;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DevelopmentConnection": "Server=(localdb)\\MSSQLLocalDB;Database=IHWCurrencyTable;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
